KFileWidget: Expand tilde to homedir only if locationtext starts with ~/

Previously we would try to expand tilde always into a homedir, even when
the file was starting with tilde character. This checks
that the location starts with `~/` before we try to expand it.

BUG: 317513